--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,72 @@
 {
   border-bottom: none;
 }
+
+.check
+{
+  background-image: url('images/complete.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y: top;
+  height: 57px;
+  min-width: 40px;
+}
+.uncheck
+{
+  background-image: url('images/uncomplete.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 57px;
+  min-width: 40px;
+}
+.up
+{
+  background-image: url('images/dropdown.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y: top;
+  height: 57px;
+  text-align: end;
+  min-width: 40px;
+}
+.down
+{
+  background-image: url('images/dropup.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y: top;
+  height: 57px;
+  text-align: end;
+  min-width: 40px;
+}
+.contain
+{
+  max-height: 200px;
+  overflow: hidden;
+}
+.subcontain
+{
+  max-height: 150px;
+  overflow: auto;
+}
+.vide
+{
+   position: relative;
+}
+.port
+{
+
+    position: relative;
+    animation-duration: 2s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+      top: 1000px;
+  }
+
+  to {
+      top: 0px;
+}
+}
